base/portal-backoffice-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: portal-backoffice
  labels:
    app.kubernetes.io/name: portal-backoffice
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 3002
      protocol: TCP
  selector:
    app.kubernetes.io/name: portal-backoffice
