base/portal-backoffice-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-backoffice
  labels:
    app.kubernetes.io/name: portal-backoffice
    app.kubernetes.io/part-of: portal-backoffice
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-path: /api/health
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-0ebc178dbce5f7d41,subnet-0e55aedb0b2c84a38,subnet-0e9fae210b2e0139b
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: portal-backoffice.dev.lbpay.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: portal-backoffice
                port:
                  number: 80
